kustomize/overlays/grafana-mimir/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-mgmt-cedi-dev
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: tailnet-nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: mimir.mgmt.cedi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mimir-nginx
                port:
                  number: 80
  tls:
    - secretName: mimir-mgmt-cedi-dev-secret
      hosts:
        - mimir.mgmt.cedi.dev
